--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
+    "include-media": "^1.4.10",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "sass": "^1.49.10",
+    "esbuild": "^0.13.15",
+    "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
+    "mdx-bundler": "^8.0.0",
+    "prism-themes": "^1.9.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-prism-plus": "^1.1.3",
+    "rehype-slug": "^5.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-mdx-images": "^1.0.3"
   },
   "devDependencies": {
     "eslint": "8.12.0",
